Bug 424873 - If there is just one tag, "Add Tags" menu of the search bar should be closed after we check/uncheck it
Summary: If there is just one tag, "Add Tags" menu of the search bar should be closed ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 20.07.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-31 17:45 UTC by Patrick Silva
Modified: 2020-08-04 20:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-31 17:45:56 UTC
SUMMARY
Currently Dolphin keeps the "Add tag" menu open after we check a tag.
This behavior is useful when we have several tags so we can select/deselect several tags at once, but it's pointless when there is just one tag.

STEPS TO REPRODUCE
1. have just one tag in Dolphin
2. press ctrl+f
3. click on "Add tags" button
4. check/uncheck the tag

OBSERVED RESULT
Dolphin keeps the "Add tag" menu open after the last step

EXPECTED RESULT
"Add tag" menu should be closed after the last step

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 1 Bug Janitor Service 2020-07-31 22:06:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/41
Comment 2 Ismael Asensio 2020-08-04 20:37:02 UTC
Git commit f9fd0e7be301eb6fa5019b0abfdfbc7ed60e2325 by Ismael Asensio.
Committed on 04/08/2020 at 20:34.
Pushed by iasensio into branch 'release/20.08'.

[search] Close tags menu after click when there is only one tag

It stays open otherwise to allow checking/unchecking several tags at a time
FIXED-IN: 20.08

M  +6    -2    src/search/dolphinfacetswidget.cpp

https://invent.kde.org/system/dolphin/commit/f9fd0e7be301eb6fa5019b0abfdfbc7ed60e2325