[search] Close tags menu after click when there is only one tag

It stays open otherwise to allow checking/unchecking several tags at a time

BUG: 424873
FIXED-IN: 20.08